src/objects/TRAK_Test_Bug_Link__c.object
<CustomObject>
    <description>Business Description: This object is used to link defects to the test step they were created from if the defect was raised during the running of a test script.

Used In: Mission Control App</description>
    <fields>
        <fullName>Bug_Description__c</fullName>
        <formula>Bug__r.Problem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bug__c</fullName>
        <label>Defect</label>
        <referenceTo>TRAK_Bug__c</referenceTo>
        <relationshipLabel>Test / Defect Links</relationshipLabel>
        <relationshipName>TRAK_Case_Bug_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Script</label>
        <referenceTo>TRAK_Test__c</referenceTo>
        <relationshipName>TRAK_Bug_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Step_Result__c</fullName>
        <label>Test Step Result</label>
        <referenceTo>TRAK_Test_Steps__c</referenceTo>
        <relationshipName>TRAK_Case_Bug_Links</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test / Defect Link</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Link No:</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test / Defect Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>